style is now scss and new name: timemachine

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "cliprojekt",
+  "name": "timemachine",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --watch",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
